<resources>
    <string name="app_name">BonVoyage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_email">someemail@user_email</string>
    <string name="user_name">username</string>
    <string name="title_activity_meny2">Bon Voyage info..</string>
    <string name="large_text">
        "Bon Voyage.\n\n"

        "'Bon Voyage' är en app som utvecklats av mig under den sista år på min skola i Sverige "Nackademin Yrkesutbildning" 2015"
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="logo">logo</string>
    <string name="newVoyage">New Voyage</string>
    <string name="newSpending">New Spending</string>
    <string name="showVoyages">Show Voyages</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="keep_logged">Keep logged</string>
    <string name="loginConfirm">Confirm Login</string>
    <string name="register">Register</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="savePrefer">Save</string>
    <string name="cancel">Cancel</string>
    <string name="newRegister">New Register</string>
    <string name="text_destination">Destination</string>
    <string name="type_trip">Type of Voyage</string>
    <string name="vacation">Vacation</string>
    <string name="business">Business</string>
    <string name="arrival_date">Arrival date</string>
    <string name="departure_date">Departure date</string>
    <string name="select">Select</string>
    <string name="text_budget"> Budget</string>
    <string name="number_of_people">Number of Persons:</string>
    <string name="save_voyage">Save Voyage</string>
    <string name="action_info">App Info</string>
    <string name="comunicate">Communicate</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="title_activity_spending">Spending</string>
    <string name="value">Value</string>
    <string name="select_date">Select date</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="spending">Spending</string>
    <string name="select_spinner">Select a category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiw_1">First of all, you need to register your trip by adding of your destination, what kind of trip will you have, \"Vacations\" or \"Business\", arrival date, departure date, how much money will you have to spend in your trip and finally how many people will be in this trip.</string>
    <string name="tab_words">Testing Tabs 1</string>
    <string name="tabRateAPet">Testando 01</string>
    <string name="tabViewMyRates">Testando 02</string>
    <string name="info_howitworks">”BonVoyage” Är en rese app för alla som vill registrerar sina resor.
        Appen gör möjligt att registrera ditt användarnamn och lösenord för att få komma in i programmet och sedan, i
        instrumentbrädan, kan du registrera din resa, sätta på hur mycket pengar kan du spendera på resorna och hur
        många personer kommer att vara med dig under restid.  Man kan också registrerar utgifterna på den respektive
        Appen gör möjligt att registrera ditt användarnamn och lösenord för att få komma in i programmet och sedan, i
        instrumentbrädan, kan du registrera din resa, sätta på hur mycket pengar kan du spendera på resorna och hur
        många personer kommer att vara med dig under restid.  Man kan också registrerar utgifterna på den respektive
        Appen gör möjligt att registrera ditt användarnamn och lösenord för att få komma in i programmet och sedan, i
        instrumentbrädan, kan du registrera din resa, sätta på hur mycket pengar kan du spendera på resorna och hur
        många personer kommer att vara med dig under restid.  Man kan också registrerar utgifterna på den respektive
        resa eller att lägga till utgift på en annan resa. Alla information lagras i databas (Sqlite) och kan bli syn
        när användare vill.</string>
    <string name="delete_database_alert">Database will be deleted and restored! Are you sure?</string>
    <string name="restore_database">Restore Database</string>
    <string name="database_alert">Database Alert!</string>
    <string name="restore_delete_database">Delete and restore all database</string>
    <string name="delete_database">Delete Database</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_limit_spending_values">Spending limits</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Delete &amp; restore database</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_set_login">Set login page</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="simple_restore">Delete and restore only user´s voyages</string>
    <string name="restore_simple">Delete Voyages</string>
    <string name="simple_alert_restore">Database will delete and restore only user´s voyage, Are you sure?</string>
    <string name="close_alert">This application will close! Are you sure?</string>
    <string name="place_you_go">Place you go</string>
    <string name="date_you_go">Date you go</string>
    <string name="budget_you_have">Budget you have</string>
    <string name="title_activity_voyage_list_viewer">Voyage Viewer</string>
    <string name="title_activity_voyage_list">Voyage List</string>
    <string name="no_trip_msg">There is no Voyage registered in database, please create a Voyage first..</string>
    <string name="voyage_list">Voyage list</string>
    <string name="img_button">Image Button</string>
    <string name="limit_value">Limit value</string>
    <string name="set_limits">Set Spend Limits</string>
    <string name="set_value_limit">Set Limit Value %</string>
    <string name="value_limit_summary">Notify when the spendings are going over the limit</string>
    <string name="value_limit">Limit Value</string>
    <string name="spending_date">Spending date</string>
    <string name="spend_value">Spend Value</string>
    <string name="spend_description">Spend Description</string>
    <string name="money">$</string>
    <string name="delete_spendings">Spending will be deleted! Are you sure?</string>
    <string name="title_activity_spend_list">Spend List</string>
    <string name="type_voyage">Voyage type</string>
    <string name="total_spend">Total Spend:</string>
    <string name="spending_list">Spending List</string>
    <string name="limit_alert">Hi! You are in the limit of your budget!</string>
    <string name="show_alert">Show limit alert</string>


    <!-- Weather Strings  -->
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="voyage_weather">Voyage Weather</string>
    <string name="unit_selector">Switch to Fahrenheit</string>
    <string name="location_format">City, Country</string>
    <string name="find_location">Find weather on new places:</string>
    <string name="weather">Weather</string>
    <string name="weather_settings">Weather settings</string>
    <string name="pref_header_weather_sync">Weather settings</string>
    <string name="manual_location_sumary">Search for weather of preferred city..</string>


</resources>
