<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <bonvoyage.database.ResetUserVoyageInfo
        android:dialogTitle="@string/database_alert"
        android:dialogMessage="@string/simple_alert_restore"
        android:key="restore_database"
        android:summary="@string/simple_restore"
        android:title="@string/restore_simple">
    </bonvoyage.database.ResetUserVoyageInfo>

    <bonvoyage.database.ResetAllDatabase
        android:dialogTitle="@string/database_alert"
        android:dialogMessage="@string/delete_database_alert"
        android:key="restore_database"
        android:summary="@string/restore_delete_database"
        android:title="@string/delete_database">
    </bonvoyage.database.ResetAllDatabase>



</PreferenceScreen>
