<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.paulo.nackademin.examen.bonvoyage.SpendingActivity"
    tools:showIn="@layout/activity_spending">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:layout_width="157dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_spinner"
            android:drawableLeft="@drawable/ic_playlist_add_black_24dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fe000000"
            android:textStyle="bold" />


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableNewSpending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:stretchColumns="0,1,">

            <TableRow>

                <EditText
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/cash_multiple"
                    android:hint="@string/value"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_calendar_24dp"
                    android:text="@string/select_date" />


            </TableRow>

            <EditText
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/library_books"
                android:hint="@string/description"
                android:inputType="text" />

            <EditText
                android:id="@+id/placeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:hint="@string/place"
                android:inputType="text" />

            <Button
                android:id="@+id/spending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:drawableLeft="@drawable/cash_usd"
                android:onClick="saveSpending"
                android:text="@string/spending" />


        </TableLayout>


    </LinearLayout>



</RelativeLayout>
